# srec

./: CMakeLists.txt  README.md  bin2srec.cpp  build.sh  srec2bin.cpp  sreccheck.cpp  toolchainfile.cmake
armv7-eabihf--musl--stable-2023.11-1/: README.txt  buildroot.config  summary.csv
armv7-eabihf--musl--stable-2023.11-1/arm-buildroot-linux-musleabihf/lib/: libatomic.la  libgcc_s.so.1  libgfortran.la  libgfortran.so.5.0.0  libitm.la  libitm.so.1.0.0  libstdc++.la  libstdc++.so.6.0.30  libstdc++.so.6.0.30-gdb.py  libstdc++fs.la  libsupc++.la
armv7-eabihf--musl--stable-2023.11-1/arm-buildroot-linux-musleabihf/lib/ldscripts/: armelf_linux_eabi.x  armelf_linux_eabi.xbn  armelf_linux_eabi.xc  armelf_linux_eabi.xce  armelf_linux_eabi.xd  armelf_linux_eabi.xdc  armelf_linux_eabi.xdce  (+33 more)
armv7-eabihf--musl--stable-2023.11-1/etc/meson/: cross-compilation.conf  cross-compilation.conf.in
armv7-eabihf--musl--stable-2023.11-1/include/: gmp.h
armv7-eabihf--musl--stable-2023.11-1/include/python3.11/: pyconfig.h
armv7-eabihf--musl--stable-2023.11-1/lib/: libcc1.la  libcc1.so.0.0.0  libexpat.la  libexpat.so.1.8.10  libffi.la  libffi.so.8.1.2  libform.so.6.4  libgmp.la  libgmp.so.10.5.0  libltdl.la  libltdl.so.7.3.1  libmenu.so.6.4  libmpc.la  libmpc.so.3.2.1  libmpfr.la  libmpfr.so.6.1.1  libncurses.so.6.4  libpanel.so.6.4  libpkgconf.la  libpkgconf.so.3.0.0  libz.so.1.3
armv7-eabihf--musl--stable-2023.11-1/lib/pkgconfig/: expat.pc  gmp.pc  libffi.pc  libpkgconf.pc  mpfr.pc  python-3.11-embed.pc  python-3.11.pc  zlib.pc
armv7-eabihf--musl--stable-2023.11-1/lib/python3.11/: _sysconfigdata__linux_x86_64-linux-gnu.py
armv7-eabihf--musl--stable-2023.11-1/share/autoconf/: autom4te.cfg
armv7-eabihf--musl--stable-2023.11-1/share/buildroot/: sdk-location  toolchainfile.cmake
srec/: CMakeLists.txt  crc32.hpp  srec.cpp  srec.hpp
test/: CMakeLists.txt  test.cpp
(+79 files in other folders)
